# shovel

./: .env  .gitignore  README.md  docker-compose-a.yml  docker-compose-b.yml  docker-compose-c.yml  docker-compose.yml  start.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/0_init/: migration.sql
frontend/prisma/migrations/1_generated_cols/: migration.sql
frontend/prisma_eve_db/: schema.prisma
frontend/prisma_eve_db/eve_db/: client.ts  commonInputTypes.ts  models.ts
frontend/prisma_payload_db/: schema.prisma
frontend/prisma_payload_db/payload_db/: client.ts  commonInputTypes.ts  models.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: schema.ts  state.svelte.ts
frontend/src/params/: flowId.ts  serviceName.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/static/css/: style.css
frontend/static/js/: flowdisplay.js  services-manager.js
suricata/: .gitignore  Cargo.toml  Dockerfile  diesel.toml  entrypoint.sh  suricata-tcp-payload-postgres-output.lua  suricata-udp-payload-postgres-output.lua
suricata/lua/: Dockerfile
suricata/luarocks/: Dockerfile
suricata/migrations/00000000000001_init_db/: down.sql  up.sql
suricata/rules/: suricata.rules
suricata/src/: database.rs  lib.rs  models.rs  schema.rs
tshark/: DOCKERFILE  Dockerfile  init.sh
webapp/: main.py
webapp/static/css/: style.css
webapp/static/js/: flowlist.js  services-manager.js
webapp/templates/: index.html.jinja2
(+47 files in other folders)
